# geometric-algebra-project

./: CMakeLists.txt  README.md
include/: FreeFlyCamera.hpp  Interface.hpp  View.hpp  c2gaTools.hpp  drawing.hpp
lib/garamon_c2ga/src/c2ga/: Mvec.hpp
lib/garamon_c3ga/: CMakeLists.txt
lib/garamon_p2ga/: CMakeLists.txt  README.md  cheatSheet.txt  setup.py
lib/garamon_p2ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
lib/garamon_p2ga/sample/: CMakeLists.txt  sample.py
lib/garamon_p2ga/sample/src/: main.cpp
lib/garamon_p2ga/src/p2ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
lib/glimac/include/glimac/: SDLWindowManager.hpp
lib/glimac/src/: SDLWindowManager.cpp
lib/imgui/: CMakeLists.txt
lib/imgui/src/: imgui.cpp  imgui_demo.cpp
modules/: FindC2GA.cmake  FindP2GA.cmake
src/: FreeFlyCamera.cpp  Interface.cpp  View.cpp  main.cpp
src/shaders/: color.fs.glsl
src/shapes/: sphere.cpp
